# python_hometasks

hw_1/: artifacts_file1.txt  artifacts_file2.txt  pyproject.toml  task1.py  task2.py  task3.py
hw_1/artifacts/: artifacts_task1.txt  artifacts_task2.txt  artifacts_task3.txt
hw_2/: main.py
hw_2/src/latex_lib1243125/: __init__.py
hw_3/: pyproject.toml  task1_3.py  task2.py
hw_3/artifacts/: A.txt  AB.txt  CD.txt  hash.txt
hw_4/: pyproject.toml  task1.py  task2.py  task3.py
hw_4/artifacts/: task1.txt  task2.txt  task3.txt
