[project]
authors = [{name = "leonid", email = "leonid.alhimenkov@yandex.ru"}]
dependencies = []
name = "hw_3"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hw_3 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.4,<3"
ruff = ">=0.11.2,<0.12"
