[project]
authors = [{name = "leonid", email = "leonid.alhimenkov@yandex.ru"}]
dependencies = []
name = "hw_4"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hw_4 = { path = ".", editable = true }

[tool.pixi.tasks]
